[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oee-mcp"
version = "0.1.0"
description = "MCP server for oee: Overall Equipment Effectiveness, the six big losses and charts for AI agents."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Atakan Arikan" }]
requires-python = ">=3.10"
dependencies = ["oee[plot]>=0.1.2", "mcp>=1.0"]
keywords = [
    "mcp", "model-context-protocol", "ai-agents", "oee",
    "overall-equipment-effectiveness", "manufacturing", "tpm", "teep",
    "six-big-losses", "production",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
oee-mcp = "oee_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "build"]

[project.urls]
Homepage = "https://github.com/arikanatakan/oee-mcp"
Repository = "https://github.com/arikanatakan/oee-mcp"
Issues = "https://github.com/arikanatakan/oee-mcp/issues"
Library = "https://github.com/arikanatakan/oee"

[tool.setuptools.packages.find]
include = ["oee_mcp*"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
