[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "oee-mcp"
version = "0.2.0"
description = "MCP server for oee: Overall Equipment Effectiveness, the six big losses and charts for AI agents."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Atakan Arikan" }]
requires-python = ">=3.10"
dependencies = ["oee[plot]>=0.2.0", "mcp>=1.0"]
keywords = [
    "mcp", "model-context-protocol", "ai-agents", "oee",
    "overall-equipment-effectiveness", "manufacturing", "tpm", "teep",
    "six-big-losses", "production",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
oee-mcp = "oee_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy", "build"]

[project.urls]
Homepage = "https://github.com/arikanatakan/oee-mcp"
Repository = "https://github.com/arikanatakan/oee-mcp"
Issues = "https://github.com/arikanatakan/oee-mcp/issues"
Library = "https://github.com/arikanatakan/oee"

[tool.setuptools.packages.find]
include = ["oee_mcp*"]

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
